# Pdf-converter-bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run_bot_forever.ps1
api/: main.py
deploy/systemd/: pdf-converter-bot.service
pdf_converter_bot/: __init__.py  bot_app.py  config.py  errors.py  rate_limit.py  storage.py  validation.py  webhook_app.py
pdf_converter_bot/providers/: __init__.py  base.py  ilovepdf_provider.py
tests/: test_error_mapping.py  test_ilovepdf_provider.py  test_rate_limit.py  test_storage.py  test_validation.py  test_webhook_app.py
