[project]
name = "pdf-converter-bot"
version = "0.1.0"
description = "Telegram webhook bot for converting files to PDF via iLovePDF"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot==21.7",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "fastapi==0.115.6",
  "uvicorn==0.32.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
